# tomatron

./: .gitignore  .password  Cargo.toml  README.md  eigenturm.toml  stm32f3.cfg  wellkom.md
.cargo/: config
automation-bit/: Cargo.toml
automation-bit/src/: lib.rs
src/: apprtfm.rs  main.rs  pump.rs
