[package]
name = "tomatron"
version = "0.1.0"
authors = ["Tomatron Irrigatron"]
edition = "2018"
readme = "README.md"


[dependencies]
panic-halt = "0.2.0"
microbit="0.7.0"
cortex-m-rt="0.6.8"
panic-semihosting = ""
# automation-bit = { path = "automation-bit" }

# [workspace]
# members = [
#     "automation-bit",
# ]
# default-members = ["automation-bit"]

# exclude=[ "roadmap/*", ".example/*"]

# [dependencies]
# panic-halt = "0.2.0"
# microbit="0.7.0"
# cortex-m-rt="0.6.8"
# embedded-hal = "0.2.3"
# lm3s6965 = "0.1.3"
# cortex-m-rtfm = "0.4.3"
# panic-semihosting = "0.5.2"
# nrf51-hal = "0.6.2"
# microbit = "0.7.0"
# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
# [[bin]]
# name = "tomatron"
# test = false
# bench = false

# [profile.release]
# codegen-units = 1 # better optimizations
# debug = true # symbols are nice and they don't increase the size on Flash
# lto = true # better optimizations

# [dependencies]
# microbit = "0.7.0"
# cortex-m = "0.6.0"
# cortex-m-rt = "0.6.8"
# cortex-m-semihosting = "0.3.3"
# panic-halt = "0.2.0"
# build_const = "0.2.1"
# tomatron = { path = "." }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
# [[bin]]
# name = ""
# test = false
# bench = false

# [profile.release]
# codegen-units = 1 # better optimizations
# debug = true # symbols are nice and they don't increase the size on Flash
# lto = true # better optimizations
